plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenCentral()
}

loom {
	// 仅使用 main 源集，客户端代码放在 src/main/java/com/beatblock/client/
	mods {
		"beatblock" {
			sourceSet sourceSets.main
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// ImGui Java bindings (UI - Dockspace 布局)
	implementation "io.github.spair:imgui-java-binding:1.86.11"
	implementation "io.github.spair:imgui-java-lwjgl3:1.86.11"
	runtimeOnly "io.github.spair:imgui-java-natives-windows:1.86.11"

	// JSON 解析（BeatmapReader 使用）
	implementation "com.google.code.gson:gson:2.10.1"

	// MP3 解码（Java Sound SPI），用于时间线真实音频播放
	implementation "com.googlecode.soundlibs:mp3spi:1.9.5-1"
	implementation "com.googlecode.soundlibs:tritonus-share:0.3.7-2"
	implementation "com.googlecode.soundlibs:jlayer:1.0.1.4"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}